added style and main
hej

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
 		<h1>todos</h1>
 		<div id="container">
 			<form>
+				<button id="markAll">x</button>
 				<input type="text" name="todoInput">
+				
 			</form>
+
 			<ul class="todoList">
 			
 			</ul>
-			
+
+			<button class="categoryBtn">All</button>
+			<button class="categoryBtn">Active</button>
+			<button class="categoryBtn">Completed</button>
 		</div>
+
+		<footer>made by Nik and Jörgen <br>
+		this is just a tribute</footer>
 	</body>
 </html>
