--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
 	<title>Nik & Jörgens ToDo</title>
 </head>
 	<body>
@@ -11,10 +13,11 @@
 			<form>
 				<button id="markAll">x</button>
 				<input type="text" name="todoInput">
+				<button type="submit">submit</button>
 				
 			</form>
 
-			<ul class="todoList">
+			<ul id="todoList">
 			
 			</ul>
 
