--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="container">
 			<form>
 				<button id="markAll">x</button>
-				<input type="text" name="todoInput">
+				<input type="text" name="todoInput" placeholder="What needs to be done?">
 				
 			</form>
 
