--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h1>todos</h1>
 		<div id="container">
 			<form>
-				<button id="markAll">x</button>
+				<button id="markAll">🔽</button>
 				<input type="text" name="todoInput" placeholder="What needs to be done?">
 				
 			</form>
