--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 			
 			</ul>
 
+			<output name="todoCount"></output>
+
 			<button class="categoryBtn">All</button>
 			<button class="categoryBtn">Active</button>
 			<button class="categoryBtn">Completed</button>
