--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<h1>todos</h1>
 		<div id="container">
 			<form>
-				<button id="markAll">🔽</button>
-				<input type="text" name="todoInput" placeholder="What needs to be done?">
+				<button type = "button" id="markAll">🔽</button>
+				<input type="text" id="todoInput" name="todoInput" placeholder="What needs to be done?">
 				
 			</form>
 
@@ -22,9 +22,9 @@
 
 			<output name="todoCount"></output>
 
-			<button class="categoryBtn">All</button>
-			<button class="categoryBtn">Active</button>
-			<button class="categoryBtn">Completed</button>
+			<button id="all" class="categoryBtn">All</button>
+			<button id="active" class="categoryBtn">Active</button>
+			<button id="completed"class="categoryBtn">Completed</button>
 		</div>
 
 		<footer>made by Nik and Jörgen <br>
