--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 			<button id="all" class="categoryBtn">All</button>
 			<button id="active" class="categoryBtn">Active</button>
 			<button id="completed"class="categoryBtn">Completed</button>
+
+			<button onclick="delLine(0,1)">Remove Completed</button>
 		</div>
 
 		<footer>made by Nik and Jörgen <br>
