--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<button id="active" class="categoryBtn">Active</button>
 			<button id="completed"class="categoryBtn">Completed</button>
 
-			<button onclick="delLine(0,1)">Remove Completed</button>
+			<button id="clear" onclick="delLine(0,1)">Clear Completed</button>
 		</div>
 
 		<footer>made by Nik and Jörgen <br>
