--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			
 			</ul>
 
-			<output name="todoCount"></output>
+			<p id="output" name="todoCount"></p>
 
 			<button id="all" class="categoryBtn">All</button>
 			<button id="active" class="categoryBtn">Active</button>
