--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="To-Do List">
+    <meta name="keywords" content="To-Do, Tasks, List">
+    <meta name="author" content="Nik & Jörgen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
